<resources>
        <string name="app_name">Sindbad Store</string>

        <string name="navigation_drawer_open">Open navigation drawer</string>
        <string name="navigation_drawer_close">Close navigation drawer</string>
        <string name="nav_header_title">Android Studio</string>
        <string name="nav_header_subtitle">android.game@android.com</string>
        <string name="nav_header_desc">Navigation header</string>
        <string name="action_settings">Settings</string>

        <string name="import_image_txt">Import logo</string>
        <string name="trade_name_txt">Trade Name</string>
        <string name="company_specification_txt">Company Specification</string>
        <string name="email_txt">Email</string>
        <string name="email_or_phone_txt">Email or Phone Number</string>
        <string name="phone_number_txt">Phone Number</string>

        <string name="password_txt">Password</string>

        <string name="other_txt">Other Contact Info</string>

        <string name="location_txt">Location</string>

        <string name="register_txt">Register</string>

        <string name="login_txt">Login</string>

        <string name="ok_txt">OK</string>

        <string name="title_activity_home">Sindbad Market</string>

        <string name="tab_text_1">Tab 1</string>

        <string name="tab_text_2">Tab 2</string>

        <string name="tab_text_3">Tab 3</string>

        <string name="product">Products</string>

        <string name="add_product_title">Add Product</string>

        <string name="edit_product_title">Edit Product</string>

        <string name="title">Title</string>

        <string name="short_description">Short Description</string>

        <string name="add_button">Add</string>

        <string name="save_button">Save Changes</string>

        <string name="cancel_button">Cancel</string>

        <string name="import_product_image">Import Image</string>

        <string name="product_name_txt">Product Name</string>

        <string name="product_description">Product Description</string>

        <string name="price_txt">Price</string>

        <string name="section_format">Hello World from section: %1$d</string>

        <string name="add_product_image">Add product Image</string>

        <string name="edit_product_image">Change product Image</string>

        <string name="customize_product">Customize according to</string>

        <string name="category">Category</string>

        <string name="age">Age</string>

        <string name="job">Job</string>

        <string name="gender">Gender</string>

        <string name="company_name">Company Name</string>

        <string name="specification">Specification</string>

        <string name="manage_product">Manage Products</string>

        <string name="show_product">Show Products</string>

        <string name="show_activities">Show Activities</string>

        <string name="create_trend">Create Trend</string>

        <string name="categories">Categories</string>

        <string name="stores_navi">Stores</string>

        <string name="favorite_navi">Favorites</string>

        <string name="home_navi">Home</string>

        <string name="trend_navi">Trends</string>

        <string name="offers_navi">Offers</string>



        <string name="hello_blank_fragment">Hello blank fragment</string>

        <string name="old_price_txt">Old Price</string>

        <string name="new_price_txt">New Price</string>

        <string name="branch">Branch</string>

        <string name="select_all">Select all</string>

        <string name="city">City</string>
        <string name="province">Province</string>
        <string name="directorate">Directorate</string>
        <string name="street">Street</string>
        <string name="places">Place</string>
</resources>

